--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "report-TFG"]
 	path = report-TFG
 	url = https://github.com/rhaps0dy/report-TFG.git
-[submodule "ALE-montezuma-modified"]
+[submodule "ALE-MR-modified"]
 	path = ALE-montezuma-modified
 	url = https://github.com/rhaps0dy/ALE-montezuma-modified.git
